# flare-df

./: .env.example  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  SPINNERS.md  start.sh
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  COMPRESSION_ENGINES.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  INSTALLATION.md  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md
examples/: compression_demo.rs
src/: main.rs
src/cli/: app.rs  banner.rs  menus.rs  mod.rs
src/config/: mod.rs  settings.rs  styles.rs
src/core/: compressor.rs  mod.rs  processor.rs  scanner.rs
src/engines/: compression_mode.rs  detector.rs  ghostscript_engine.rs  mod.rs  pipeline.rs  qpdf_engine.rs  traits.rs
src/models/: mod.rs  types.rs
src/utils/: files.rs  formatting.rs  mod.rs  permissions.rs
tests/cli_alignment/: __init__.py  skills_reference.py
