[package]
name = "flare-df"
version = "1.0.0"
edition = "2021"
authors = ["flare-df"]
description = "🔥 Compresor de PDFs ultrarrápido y 100% lossless"
license = "MIT"
rust-version = "1.70"

[dependencies]
# CLI y colores
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# Procesamiento paralelo
rayon = "1.8"

# Utilidades
walkdir = "2.4"
dotenv = "0.15"
chrono = "0.4"
bytesize = "1.3"
anyhow = "1.0"
thiserror = "1.0"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
